# OpenSteamTool

./: README.md  opensteamtool.example.toml
.github/workflows/: build.yml  main.yml
src/: CMakeLists.txt  dllmain.cpp  dllmain.h
src/Hook/: HookMacros.h  HookManager.cpp  HookManager.h  Hooks_AccessToken.cpp  Hooks_AccessToken.h  Hooks_AppState.cpp  Hooks_AppState.h  Hooks_AppTicket.cpp  Hooks_AppTicket.h  Hooks_Decryption.cpp  Hooks_Decryption.h  Hooks_IPC.cpp  Hooks_IPC.h  Hooks_KeyValues.cpp  Hooks_KeyValues.h  Hooks_Manifest.cpp  Hooks_Manifest.h  Hooks_Misc.cpp  Hooks_Misc.h  Hooks_NetPacket.cpp  Hooks_NetPacket.h  Hooks_Package.cpp  Hooks_SteamUI.cpp  Patches.cpp  Patches.h  Patterns.h
src/Steam/: Enums.h  Structs.h  Types.h
src/Utils/: AppTicket.cpp  AppTicket.h  ByteSearch.cpp  ByteSearch.h  Config.cpp  Config.h  Hash.h  Log.cpp  Log.h  LuaConfig.cpp  LuaConfig.h  VehCommon.cpp  VehCommon.h  WinHttp.cpp  WinHttp.h  ost_log_modules.h
src/cmake/: Detours.cmake  FetchCache.cmake  Lua.cmake  Nanopb.cmake  Spdlog.cmake  Tomlplusplus.cmake
src/proto/: steam_messages.options  steam_messages.pb.c  steam_messages.pb.h  steam_messages.proto
